--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,7 +57,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 500 г</h3>
+              <h3 class="catalog-card__title">Cat Energy PRO 500 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -86,7 +86,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 1000 г</h3>
+              <h3 class="catalog-card__title">Cat Energy PRO 1000 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -115,7 +115,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 500 г</h3>
+              <h3 class="catalog-card__title">Cat Energy PRO 500 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -144,7 +144,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 1000 г</h3>
+              <h3 class="catalog-card__title">Cat Energy PRO 1000 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -173,7 +173,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 500 г</h3>
+              <h3 class="catalog-card__title">Cat Energy slim 500 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -202,7 +202,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 1000 г</h3>
+              <h3 class="catalog-card__title">Cat Energy slim 1000 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -231,7 +231,7 @@
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
-              <h3 class="catalog-card__title">Cat Energy <br> PRO 500 г</h3>
+              <h3 class="catalog-card__title">Cat Energy slim 500 г</h3>
             </a>
             <dl class="catalog-card__options">
               <div class="catalog-card__option">
@@ -251,57 +251,64 @@
           <a class="catalog-card__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog-card catalog-card--show-all">
-          <h3 class="catalog-card__title">Показать еще 100500 товаров</h3>
-          <p class="catalog-card__description">На самом деле вкусов гораздо больше!</p>
+          <div class="catalog-card__wrapper--show-all">
+            <span class="catalog-card__decorate catalog-card__decorate--first"></span>
+            <span class="catalog-card__decorate catalog-card__decorate--second"></span>
+            <h3 class="catalog-card__title--show-all">Показать еще 100500 товаров</h3>
+            <p class="catalog-card__description">На самом деле вкусов гораздо больше!</p>
+          </div>
           <a class="catalog-card__button button button--show-all" href="#">показать все</a>
         </li>
       </ul>
     </section>
-    <section class="additional-catalog">
-      <h2 class="additional-catalog__title">Дополнительные товары</h2>
-      <ul class="additional-catalog__list container">
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">Сахарозаменитель</h3>
-          <div class="additional-card__wrapper">
-            <p class="additional-card__description">1 упаковка (100 г)</p>
-            <p class="additional-card__description">200 &#8381;</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">питьевая вода</h3>
-          <div class="additional-card__wrapper">
-            <p class="additional-card__description">5 литров</p>
-            <p class="additional-card__description">50 &#8381;</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">молоко</h3>
-          <div class="additional-card__wrapper">
-            <p class="additional-card__description">1 литр</p>
-            <p class="additional-card__description">100 &#8381;</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">витамины</h3>
-          <div class="additional-card__wrapper">
-            <p class="additional-card__description">1 упаковка (30 г)</p>
-            <p class="additional-card__description">300 &#8381;</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </li>
-      </ul>
-    </section>
-    <section class="actions">
-      <h2 class="actions__title">Акции и новинки</h2>
-      <div class="actions__wrapper">
-        <p class="actions__description">Закажите все <br> и получите чехол для <br> кота в подарок!</p>
-      </div>
-    </section>
+    <div class="catalog__desktop-wrapper">
+      <section class="additional-catalog">
+        <h2 class="additional-catalog__title">Дополнительные товары</h2>
+        <ul class="additional-catalog__list container">
+          <li class="additional-catalog__item additional-card">
+            <h3 class="additional-card__title">Сахарозаменитель</h3>
+            <div class="additional-card__wrapper">
+              <p class="additional-card__description">1 упаковка (100 г)</p>
+              <p class="additional-card__description">200 &#8381;</p>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-catalog__item additional-card">
+            <h3 class="additional-card__title">питьевая вода</h3>
+            <div class="additional-card__wrapper">
+              <p class="additional-card__description">5 литров</p>
+              <p class="additional-card__description">50 &#8381;</p>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-catalog__item additional-card">
+            <h3 class="additional-card__title">молоко</h3>
+            <div class="additional-card__wrapper">
+              <p class="additional-card__description">1 литр</p>
+              <p class="additional-card__description">100 &#8381;</p>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </li>
+          <li class="additional-catalog__item additional-card">
+            <h3 class="additional-card__title">витамины</h3>
+            <div class="additional-card__wrapper">
+              <p class="additional-card__description">1 упаковка (30 г)</p>
+              <p class="additional-card__description">300 &#8381;</p>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="actions">
+        <h2 class="visually-hidden">Акции и новинки</h2>
+        <div class="actions__wrapper">
+          <p class="actions__description">Закажите все <br> и получите чехол для <br> кота в подарок!</p>
+        </div>
+      </section>
+    </div>
     <section class="subscribe">
       <h2 class="visually-hidden">Оформите подписку</h2>
+      <p class="subscribe__text-title">Акции и новинки</p>
       <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
       <form class="subscribe__form form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="email">
@@ -314,8 +321,8 @@
 
   <footer class="footer">
     <div class="footer__grid">
-      <div class="footer__contacts contacts">
-        <p class="contacts__invite">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
+      <div class="footer__contacts contacts contacts--mobile">
+        <p class="contacts__invite contacts__invite--mobile">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
       </div>
       <div class="footer__map map">
