--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preload" href="/fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png">
@@ -14,12 +16,12 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header no-js header-container">
-    <a class="main-header__logo logo" href="index.html">
+  <header class="main-header no-js" data-test="header">
+    <a class="main-header__logo no-js logo" href="index.html">
       <picture>
         <source media="(min-width: 1330px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="images/logo-tablet-header.svg" width="174" height="50" type="image/svg+xml">
-        <img class="logo__img" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+        <img class="logo__img no-js" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
     </a>
     <button class="main-header__menu-button no-js" type="button">
@@ -44,16 +46,16 @@
   </header>
 
   <main class="main">
-    <section class="catalog">
+    <section class="catalog" data-test="catalog">
       <h1 class="main-title catalog__title">Каталог продукции</h1>
       <ul class="catalog__list">
         <li class="catalog__item catalog-card">
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/chicken-500-desktop@1x.png 1x, images/chicken-500-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/chicken-500-tablet@1x.png 1x, images/chicken-500-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/chicken-500-mobile@1x.png" srcset="images/chicken-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 500гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/chicken-500-desktop@1x.webp 1x, images/chicken-500-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/chicken-500-tablet@1x.webp 1x, images/chicken-500-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/chicken-500-mobile@1x.webp" srcset="images/chicken-500-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром курица 500гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -80,9 +82,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/chicken-1000-desktop@1x.png 1x, images/chicken-1000-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/chicken-1000-tablet@1x.png 1x, images/chicken-1000-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/chicken-1000-mobile@1x.png" srcset="images/chicken-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 1000гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/chicken-1000-desktop@1x.webp 1x, images/chicken-1000-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/chicken-1000-tablet@1x.webp 1x, images/chicken-1000-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/chicken-1000-mobile@1x.webp" srcset="images/chicken-1000-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром курица 1000гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -109,9 +111,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/fish-500-desktop@1x.png 1x, images/fish-500-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/fish-500-tablet@1x.png 1x, images/fish-500-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/fish-500-mobile@1x.png" srcset="images/fish-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 500гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/fish-500-desktop@1x.webp 1x, images/fish-500-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/fish-500-tablet@1x.webp 1x, images/fish-500-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/fish-500-mobile@1x.webp" srcset="images/fish-500-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром рыба 500гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -138,9 +140,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/fish-1000-desktop@1x.png 1x, images/fish-1000-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/fish-1000-tablet@1x.png 1x, images/fish-1000-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/fish-1000-mobile@1x.png" srcset="images/fish-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 1000гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/fish-1000-desktop@1x.webp 1x, images/fish-1000-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/fish-1000-tablet@1x.webp 1x, images/fish-1000-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/fish-1000-mobile@1x.webp" srcset="images/fish-1000-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром рыба 1000гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -167,9 +169,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/buckweat-500-desktop@1x.png 1x, images/buckweat-500-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-500-tablet@1x.png 1x, images/buckweat-500-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/buckweat-500-mobile@1x.png" srcset="images/buckweat-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 500гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/buckweat-500-desktop@1x.webp 1x, images/buckweat-500-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/buckweat-500-tablet@1x.webp 1x, images/buckweat-500-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/buckweat-500-mobile@1x.webp" srcset="images/buckweat-500-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром гречка 500гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -196,9 +198,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/buckweat-1000-desktop@1x.png 1x, images/buckweat-1000-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-1000-tablet@1x.png 1x, images/buckweat-1000-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/buckweat-1000-mobile@1x.png" srcset="images/buckweat-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 1000гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/buckweat-1000-desktop@1x.webp 1x, images/buckweat-1000-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/buckweat-1000-tablet@1x.webp 1x, images/buckweat-1000-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/buckweat-1000-mobile@1x.webp" srcset="images/buckweat-1000-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром гречка 1000гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -225,9 +227,9 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/rice-500-desktop@1x.png 1x, images/rice-500-desktop@2x.png 2x">
-                <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/rice-500-tablet@1x.png 1x, images/rice-500-tablet@2x.png 2x">
-                <img class="catalog-card__image" src="images/rice-500-mobile@1x.png" srcset="images/rice-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рис 500гр">
+                <source width="169" height="210" type="image/webp" media="(min-width: 1330px)" srcset="images/rice-500-desktop@1x.webp 1x, images/rice-500-desktop@2x.webp 2x">
+                <source width="200" height="210" type="image/webp" media="(min-width: 768px)" srcset="images/rice-500-tablet@1x.webp 1x, images/rice-500-tablet@2x.webp 2x">
+                <img class="catalog-card__image" src="images/rice-500-mobile@1x.webp" srcset="images/rice-500-mobile@2x.webp 2x" width="140" height="107" alt="Банка с товаром рис 500гр">
               </picture>
             </a>
             <a class="catalog-card__link" href="#">
@@ -251,17 +253,17 @@
           <a class="catalog-card__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog-card catalog-card--show-all">
-          <div class="catalog-card__wrapper--show-all">
+          <div class="catalog-card__wrapper">
             <span class="catalog-card__decorate catalog-card__decorate--first"></span>
             <span class="catalog-card__decorate catalog-card__decorate--second"></span>
-            <h3 class="catalog-card__title--show-all">Показать еще 100500 товаров</h3>
+            <h3 class="catalog-card__title catalog-card__title--show-all">Показать еще 100500 товаров</h3>
             <p class="catalog-card__description">На самом деле вкусов гораздо больше!</p>
           </div>
           <a class="catalog-card__button button button--show-all" href="#">показать все</a>
         </li>
       </ul>
     </section>
-    <div class="catalog__desktop-wrapper">
+    <div class="catalog-desktop-wrapper" data-test="additional">
       <section class="additional-catalog">
         <h2 class="additional-catalog__title">Дополнительные товары</h2>
         <ul class="additional-catalog__list container">
@@ -300,7 +302,7 @@
         </ul>
       </section>
       <section class="actions">
-        <h2 class="visually-hidden">Акции и новинки</h2>
+        <h2 class="visually-hidden">Акции</h2>
         <div class="actions__wrapper">
           <p class="actions__description">Закажите все <br> и получите чехол для <br> кота в подарок!</p>
         </div>
@@ -325,22 +327,23 @@
         <p class="contacts__invite contacts__invite--mobile">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
       </div>
-      <div class="footer__map map">
+      <div class="footer__map map map--no-js">
+        <iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989428381927!2d30.32050301267207!3d59.93879686198292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1751735018956!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <picture>
-          <!-- Десктоп (1440px+) -->
+          <!-- Десктоп (1330px+) -->
           <source media="(min-width: 1330px)" srcset="
-      images/map-desktop@1x.jpg 1x,
-      images/map-desktop@2x.jpg 2x
-    " type="image/jpeg" width="1440" height="400">
-          <!-- Планшет (768px–1439px) -->
+      images/map-desktop@1x.webp 1x,
+      images/map-desktop@2x.webp 2x
+    " type="image/webp" width="1440" height="400">
+          <!-- Планшет (768px–1330px) -->
           <source media="(min-width: 768px)" srcset="
-      images/map-tablet@1x.jpg 1x,
-      images/map-tablet@2x.jpg 2x
-    " type="image/jpeg" width="768" height="400">
+      images/map-tablet@1x.webp 1x,
+      images/map-tablet@2x.webp 2x
+    " type="image/webp" width="768" height="400">
           <!-- Мобильные (до 767px) -->
-          <img class="map__image" src="images/map-mobile@1x.jpg" srcset="
-      images/map-mobile@1x.jpg 1x,
-      images/map-mobile@2x.jpg 2x
+          <img class="map__image" src="images/map-mobile@1x.webp" srcset="
+      images/map-mobile@1x.webp 1x,
+      images/map-mobile@2x.webp 2x
     " width="320" height="362" alt="Карта: как нас найти">
         </picture>
       </div>
