--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preload" href="/fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png">
@@ -14,7 +16,7 @@
 </head>
 
 <body class="page__body page__body--index">
-  <header class="main-header no-js header-container main-header--index">
+  <header class="main-header no-js main-header--index" data-test="header">
     <a class="main-header__logo no-js logo" href="#">
       <picture>
         <source media="(min-width: 1330px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
@@ -43,19 +45,19 @@
     </nav>
   </header>
   <main class="main">
-    <section class="promo">
+    <section class="promo" data-test="hero">
       <h1 class="promo__title main-title main-title--light">Функциональное <br> питание для котов</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
       <div class="promo__image-container">
         <picture>
-          <source width="552" height="499" type="image/png" media="(min-width: 1330px)" srcset="images/promo-index-desktop@1x.png 1x, images/promo-index-desktop@2x.png 2x">
-          <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/promo-index-tablet@1x.png 1x, images/promo-index-tablet@2x.png 2x">
-          <img class="promo__image" src="images/promo-index-mobile@1x.png" srcset="images/promo-index-mobile@2x.png 2x" width="280" height="270" alt="банка с продуктом Cat Energy" style="background: transparent;">
+          <source width="552" height="499" type="image/webp" media="(min-width: 1330px)" srcset="images/promo-index-desktop@1x.webp 1x, images/promo-index-desktop@2x.webp 2x">
+          <source width="709" height="609" type="image/webp" media="(min-width: 768px)" srcset="images/promo-index-tablet@1x.webp 1x, images/promo-index-tablet@2x.webp 2x">
+          <img class="promo__image" src="images/promo-index-mobile@1x.webp" srcset="images/promo-index-mobile@2x.webp 2x" width="280" height="270" alt="банка с продуктом Cat Energy" style="background: transparent;">
         </picture>
         <a class="promo__button button" href="#">Подобрать программу</a>
       </div>
     </section>
-    <section class="programs">
+    <section class="programs" data-test="programs">
       <h2 class="visually-hidden">Выбор направления программы</h2>
       <ul class="programs__list container">
         <li class="programs__item program-card program-card--seat">
@@ -70,7 +72,7 @@
         </li>
       </ul>
     </section>
-    <section class="features">
+    <section class="features" data-test="features">
       <div class="container">
         <h2 class="features__slogan">Как это работает</h2>
         <ol class="features__list">
@@ -92,71 +94,74 @@
         </ol>
       </div>
     </section>
-    <section class="example">
-      <div class="container">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__main-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="example__stats stats">
-          <div class="example__stats-wrapper">
-            <div class="stats__item">
-              <div class="stats__value">5 кг</div>
-              <div class="stats__label">снижение веса</div>
+    <section class="example" data-test="proof">
+      <div class="example__wrapper">
+        <div class="container">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__main-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="example__stats stats">
+            <div class="example__stats-wrapper">
+              <div class="stats__item">
+                <div class="stats__value">5 кг</div>
+                <div class="stats__label">снижение веса</div>
+              </div>
+              <div class="stats__item">
+                <div class="stats__value">60 дней</div>
+                <div class="stats__label">затрачено времени</div>
+              </div>
             </div>
-            <div class="stats__item">
-              <div class="stats__value">60 дней</div>
-              <div class="stats__label">затрачено времени</div>
-            </div>
+            <p class="stats__cost">Затраты на питание: <span>15 000 руб.</span></p>
           </div>
-          <p class="stats__cost">Затраты на питание: 15 000 руб.</p>
         </div>
-      </div>
-      <div class="slider-container">
-        <div class="slider slider-container">
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/fat-cat-tablet@1x.png 1x, images/fat-cat-tablet@2x.png 2x">
-            <img class="slider__image slider__image--left" src="images/fat-саt-mobile@1x.png" srcset="images/fat-саt-mobile@2x.png 2x" width="280" height="256" alt="Фото до: жирненький котик">
-          </picture>
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slim-cat-tablet@1x.png 1x, images/slim-cat-tablet@2x.png 2x">
-            <img class="slider__image slider__image--right" src="images/slim-cat-mobile@1x.png" srcset="images/slim-cat-mobile@2x.png 2x" width="280" height="256" alt="Фото после: стройный котик">
-          </picture>
-          <div class="slider__controls">
-            <button class="slider__button" type="button">
-              <span class="visually-hidden">Сдвиг картинки влево вправо</span>
-              <span class="slider__thumb"></span>
-            </button>
+        <div class="slider-container">
+          <div class="slider">
+            <picture>
+              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/fat-cat-tablet@1x.webp 1x, images/fat-cat-tablet@2x.webp 2x">
+              <img class="slider__image slider__image--left" src="images/fat-саt-mobile@1x.webp" srcset="images/fat-саt-mobile@2x.webp 2x" width="280" height="256" alt="Фото до: жирненький котик">
+            </picture>
+            <picture>
+              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/slim-cat-tablet@1x.webp 1x, images/slim-cat-tablet@2x.webp 2x">
+              <img class="slider__image slider__image--right" src="images/slim-cat-mobile@1x.webp" srcset="images/slim-cat-mobile@2x.webp 2x" width="280" height="256" alt="Фото после: стройный котик">
+            </picture>
+            <div class="slider__controls">
+              <button class="slider__button" type="button">
+                <span class="visually-hidden">Сдвиг картинки влево вправо</span>
+                <span class="slider__thumb"></span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__grid">
-      <div class="footer__contacts contacts">
+    <div class="footer__grid" data-test="contacts">
+      <div class="footer__contacts contacts contacts--no-js">
         <p class="contacts__invite">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
       </div>
-      <div class="footer__map map">
+      <div class="footer__map map map--no-js">
+        <iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989428381927!2d30.32050301267207!3d59.93879686198292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1751735018956!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <picture>
           <!-- Десктоп (1440px+) -->
           <source media="(min-width: 1330px)" srcset="
-      images/map-desktop@1x.jpg 1x,
-      images/map-desktop@2x.jpg 2x
-    " type="image/jpeg" width="1440" height="400">
+      images/map-desktop@1x.webp 1x,
+      images/map-desktop@2x.webp 2x
+    " type="image/webp" width="1440" height="400">
           <!-- Планшет (768px–1439px) -->
           <source media="(min-width: 768px)" srcset="
-      images/map-tablet@1x.jpg 1x,
-      images/map-tablet@2x.jpg 2x
-    " type="image/jpeg" width="768" height="400">
+      images/map-tablet@1x.webp 1x,
+      images/map-tablet@2x.webp 2x
+    " type="image/webp" width="768" height="400">
           <!-- Мобильные (до 767px) -->
-          <img class="map__image" src="images/map-mobile@1x.jpg" srcset="
-      images/map-mobile@1x.jpg 1x,
-      images/map-mobile@2x.jpg 2x
+          <img class="map__image" src="images/map-mobile@1x.webp" srcset="
+      images/map-mobile@1x.webp 1x,
+      images/map-mobile@2x.webp 2x
     " width="320" height="362" alt="Карта: как нас найти">
         </picture>
       </div>
     </div>
-    <div class="footer__bottom">
+    <div class="footer__bottom" data-test="footer">
       <a class="footer__logo logo" href="#">
         <picture>
           <img class="footer__logo-img" src="images/logo-text.svg" width="128" height="24" alt="Cat Energy">
